linear operators post

--- a/posts/2021-04-26.md
+++ b/posts/2021-04-26.md
@@ -283,7 +283,7 @@ This may look like a relatively minor bit of optimization, and that isn't entire
 What this does for us though is put front and center the ability to fuse these operations, which is the first step towards optimizing them.
 Differential dataflow uses Rust, which will codegen to LLVM which can then do optimizations and that is all great news.
 
-What *I'm* most interested in is how we can do even more optimization when the operators are expressed declaratively.a
+What *I'm* most interested in is how we can do even more optimization when the operators are expressed declaratively.
 
 ## Linear operators in Materialize
 
