correct nomenclature error

--- a/posts/2021-04-26.md
+++ b/posts/2021-04-26.md
@@ -124,7 +124,7 @@ It would be great if there weren't as many special cases!
 All of the operators above, and indeed all linear operators, are instances of one **most general** linear operator.
 
 Let `logic` be any function from a single record `data` to an update stream (let's say "a set of update triples").
-Let `LARGE` be the collection containing the sum over all `data` of the collection `data x logic(data)`, where `x` is [cross product](https://en.wikipedia.org/wiki/Cross_product).
+Let `LARGE` be the collection containing the sum over all `data` of the collection `data x logic(data)`, where `x` is [Cartesian product](https://en.wikipedia.org/wiki/Cartesian_product).
 This means `LARGE` contains many records of the form `(data, value)`, where `value` is among the things produced by `logic(data)`.
 The update stream for `LARGE` contains `((data, value), time, diff)` for each `(value, time, diff)` in `logic(data)`.
 
