--- a/posts/2021-05-14.md
+++ b/posts/2021-05-14.md
@@ -10,9 +10,10 @@ In a sense, there is.
 For the plan to apply, you need to have pre-built several indexes over the involved data.
 Materialize can share pre-built indexes between queries, like you might expect from a relational database, but unlike most stream processors.
 Once those indexes are in place, each additional query requires no additional memory for its joins.
+So there is a fixed up-front cost for each of your relations, but then no per-query cost as you join those relations multiple ways.
 
 That is probably still not clear, and there is a lot of interesting stuff to learn, so let's get started!
-By the end of the post, I hope you'll be able to put together queries that use fewer resources, and understand some of the mystery behind it.
+By the end of the post, I hope you'll be able to put together queries that use fewer resources, and understand some of the mystery behind it!
 
 ## Materialize
 
@@ -102,11 +103,11 @@ Let's consider that join from above, and ask "what if someone gave us a table `d
 Let's say we've already computed the join on the prior `customer` relation and just want to know what additions there will be in the output.
 If we use the [distributive property](https://en.wikipedia.org/wiki/Distributive_property), we can conclude that
 ```
-    customer x orders x lineitem
+      customer x orders x lineitem
  +  d_customer x orders x lineitem
  =  (customer + d_customer) x orders x lineitem
 ```
-If you believe this math, then you can see that we can go from the prior value of the join (first line) to the new value of the join (last line) by adding in a correction term that uses `d_customer` in place of `customer`.
+If you believe this math, then you can see that we can go from the prior value of the join (the first line) to the new value of the join (the last line) by adding in a correction term that uses `d_customer` in place of `customer`.
 The SQL query that figures this out the correction for us is:
 ```sql
 SELECT
@@ -152,27 +153,84 @@ However, the first and last line are different plans, and they are each the righ
 ### Update Streams?
 
 All of the above was about handling just one batch of updates, to only one of the inputs.
-Things become more interesting as we consider streams of inputs at many different `time`s, where any one `time` may contain updates to multiple inputs.
+It also presumed that we were dealing only with additions, which made the SQL for the update rule easier to write.
+Things become more interesting as we consider streams of arbitrary updates at many different `time`s, where any one `time` may contain updates to multiple inputs.
 However, we are going to borrow all of the intuition up above in determining what to do.
 
 Materialize is presented with update streams for `customer`, `orders`, and `lineitem`, and needs to build a dataflow that produces an output update stream for their join.
 Let's start with the ideas from above, and see what sort of details we need to fill in.
 
-We'll build a dataflow that has an update *path* for each of its input relations.
+We'll do that by building a dataflow that has an update *path* for each of its input relations.
+We'll use an as of yet unspecified `join_with` operator, whose implementation you will have to imagine for now.
 ```
 d_customer -> join_with(orders) -> join_with(lineitem)
 d_orders -> join_with(customer) -> join_with(lineitem)
 d_lineitem -> join_with(orders) -> join_with(customer)
 ```
+The intent of the `join_with` operator is that incoming updates (on the left) are matched up against accumulated results (the named argument to `join_with`), "just like" they would with the SQL queries up above.
+Specifically, the operator matches incoming updates to only those accumulated updates present by `time`, and multiplies the signs of their updates so that deletions pass through correctly.
+
 These three paths show how to respond to each of our update streams (the `d_` names).
 The paths reference the relations without the `d_` prefix, which are the accumulations of those update streams.
 That is, we could replace `orders` with a fragment `d_orders -> accumulate`.
 If we make those replacements, the three paths up above are defined only in terms of `d_customer`, `d_orders`, and `d_lineitem`, which we are taking to be the update streams.
-If we merge all of the path outputs together, we get an update stream for the whole join, which we intend to reflect all of the input changes.
+If we merge all of the path outputs together, we get an update stream for the whole join, which we hope reflects all of the input changes.
 
 Now, does it actually do the right thing?
-To answer that question we'll need to get more specific about what `join_with` does.
-Spoiler: we will find out that it does not do the right thing, without a minor correction.
+Mostly.
+There is a nit that we'll sort out in the appendix that has to do with concurrent updates to the three inputs.
+We'll spec out the `join_with` operator more clearly there, and dive in to a correction that resolves the issue.
+But it is largely correct, for the reason that it tracks our math up above.
+
+So that's a dataflow we can build.
+But should we?
+
+### Shared Arrangements
+
+This dataflow plan has a number of `join_with` operators that is quadratic in the number of inputs.
+Each of these operators seems to need to maintain some indexed data, so are we maintaining many copies of each input relation.
+Perhaps many more than we can afford to maintain?
+
+Naively, yes.
+
+This approach can be pretty terrible if each of the `join_with` operators maintains their own indexed representation of the relation they perform lookups into.
+In many streaming systems, this is how the operators have to work.
+In these systems each operator is responsible for its own state, and the dataflow plan would be unworkably expensive in terms of memory requirements, as the number and accumulated size of the join inputs increase.
+
+Materialize is different in that it can share indexed representations of accumulated updates between multiple operators, and across multiple dataflows.
+The dataflow plan above costs only in proportion to the number of *distinct* indexed representations, rather than the number of *uses* of those representations.
+
+So how many *distinct* indexed representations are there?
+
+In many standard relational settings, relational joins are done on the basis of *keys*.
+A relation's [primary key](https://en.wikipedia.org/wiki/Primary_key) is a set of columns whose values uniquely determine a row in the relation.
+A relation's columns may also contain [foreign keys](https://en.wikipedia.org/wiki/Foreign_key), which are references to the primary keys of other relations.
+It is very common for the joins to be primary-foreign key joins, where a foreign key in one relation is used to "look up" the corresponding entry in a relation with that primary key.
+This is the case in our example above with `customer`, `orders`, and `lineitem`, and it is very common in relational workloads.
+
+In this standard setting, it is sufficient to have indexes on the primary and foreign keys for each relation.
+That is *a* set of distinct indexed representations that is often sufficient.
+This set is also often *linear* in the number of relations;
+both a [star schema](https://en.wikipedia.org/wiki/Star_schema) and a [snowflake schema](https://en.wikipedia.org/wiki/Snowflake_schema) have one primary key for each relation, each of which has one corresponding foreign key.
+Each relation contributes at most two indexes: its own primary key index, and the foreign key index of the relation that references it.
+
+Things can certainly get more complicated than this, but these joins cover the vast majority of what folks are writing with SQL.
+
+## Conclusions
+
+Materialize has access to join plans that are very inefficient in streaming systems which cannot share indexed state.
+These join plans require no new arranged data when the standard indexes are in place.
+This dramatically reduces the costs of these plans, removing the memory costs of storing the data and the computational costs of keeping the data up to date.
+Best of all, these indexes are the natural ones you might expect to form in a standard relational database; no wild new concepts required!
+
+Joins are one of the key features in Materialize.
+We've worked hard to lay the foundations for efficient join execution, so that the system itself doesn't need to work hard when you issue those join queries, nor when their inputs start changing and we need to keep the results up to date.
+
+## Appendix: Correctness
+
+Up above we posed a dataflow containing multiple paths, each responsible for the updates to one relation.
+We stated that they were *largely* correct, and indeed they are if for each `time` at most one of the inputs experiences an update.
+The collection of paths together is *not* correct, in that updates to multiple inputs may result in a match that is contributed by both paths.
 
 The `join_with` operator takes two inputs.
 Coming from the left, we have `d_updates` that is an update stream we need to respond to.
@@ -195,16 +253,3 @@ For example, we could have the `d_first` update "go first", where it will *not* 
 Then we have `d_second` go, and by this point the updates to `first` at the same time are visible.
 This ends up amounting to breaking ties in `time` by some order on the join inputs themselves, which only applies for times that are exactly the same.
 Fortunately, we don't need to break ties within one join input, as those updates are not matched with each other.
-
-So that's a dataflow we can build.
-But should we?
-
-### Shared Arrangements
-
-This dataflow plan has a number of `join_with` operators that are quadratic in the number of inputs.
-Each of these operators seems to need to maintain some indexed data, so are we maintaining many copies of each input relation.
-Perhaps many more than we can afford to maintain?
-
-Yes.
-
-This approach is pretty terrible if each of the `join_with` operators maintains their own indexed representation of the relation they perform lookups into.
